--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,9 @@
         android:layout_width="299dp"
         android:layout_height="85dp"
         android:layout_marginBottom="28dp"
-        android:backgroundTint="#626567"
+        android:backgroundTint="#FF33373A"
         android:text="Leer"
+        android:fontFamily="@font/iwantv2c"
         android:textColor="#FDFEFE"
         android:textSize="@android:dimen/app_icon_size"
         app:layout_constraintBottom_toTopOf="@+id/button2"
@@ -40,7 +41,8 @@
         android:layout_width="299dp"
         android:layout_height="85dp"
         android:layout_marginBottom="60dp"
-        android:backgroundTint="#626567"
+        android:fontFamily="@font/iwantv2c"
+        android:backgroundTint="#33373A"
         android:text="Crear"
         android:textColor="#FDFEFE"
         android:textSize="@android:dimen/app_icon_size"
